<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.zehren.moviequotes.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_increase_size"
        android:orderInCategory="50"
        android:title="@string/increase_font_size"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/arrow_up_float"/>
    <item
        android:id="@+id/action_decrease_size"
        android:orderInCategory="51"
        android:title="@string/decrease_font_size"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/arrow_down_float"/>
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="52"
        android:title="@string/clear_text"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_get_movie"
        android:orderInCategory="10"
        android:title="@string/get_favorite_movie"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_get_moviequote"
        android:orderInCategory="11"
        android:title="@string/get_favorite_quote"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_get_all_quotes"
        android:orderInCategory="12"
        android:title="@string/get_all_quotes"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_set_author"
        android:orderInCategory="13"
        android:title="@string/set_author"
        app:showAsAction="never"/>
</menu>